--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -9,3 +9,16 @@
     --fundo: #ffffff;
     --fundo-detalhes: #ececec;
   }
+
+  .anime-left {
+    opacity: 0;
+    transform: scale(.8);
+    animation: anime-left .7s fowards
+  }
+
+  @keyframes anime-left {
+    to {
+      opacity: 1;
+      transform: initial;
+    }
+  }
